--- a/projects.html
+++ b/projects.html
@@ -6,10 +6,12 @@
   <title>Pradeep Paudel Portfolio</title>
   <link rel="stylesheet" href="styles.css" />
   <script src="https://cdn.tailwindcss.com"></script>
+  <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
+
 </head>
 <body class="font-sans">
 
-  <marquee behavior="scroll" direction="left" class="bg-blue-300 py-2 text-white font-semibold">
+  <marquee behavior="scroll" direction="left">
     Welcome to Pradeep Paudel's Portfolio | Web Developer & Graphic Designer
   </marquee>
 
@@ -35,7 +37,7 @@
       <a href="home.html" class="block py-2 hover-underline">Home</a>
       <a href="about.html" class="block py-2 hover-underline">About</a>
       <a href="projects.html" class="block py-2 hover-underline">Projects</a>
-      <a href="whyme.html" class="block py-2 hover-underline">Why Me</a>
+      <a href="whyme.html." class="block py-2 hover-underline">Why Me</a>
       <a href="contact.html" class="block py-2 hover-underline">Contact</a>
     </div>
   </header>
