--- a/whyme.html
+++ b/whyme.html
@@ -11,7 +11,7 @@
 
 <body class="font-sans">
 
-  <marquee behavior="scroll" direction="left" class="bg-blue-300 py-2 text-white font-semibold">
+  <marquee behavior="scroll" direction="left">
     Welcome to Pradeep Paudel's Portfolio | Web Developer & Graphic Designer
   </marquee>
 
