--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       </div>
     </div>
     <div id="mobile-menu" class="md:hidden hidden bg-white px-4 pb-4">
-      <a href="home.html" class="block py-2 hover-underline">Home</a>
+      <a href="index.html" class="block py-2 hover-underline">Home</a>
       <a href="about.html" class="block py-2 hover-underline">About</a>
       <a href="projects.html" class="block py-2 hover-underline">Projects</a>
       <a href="whyme.html." class="block py-2 hover-underline">Why Me</a>
