--- a/contact.html
+++ b/contact.html
@@ -19,7 +19,7 @@
     <div class="container mx-auto px-4 py-4 flex justify-between items-center">
       <h1 class="text-xl font-bold">PRADEEP PAUDEL</h1>
       <div class="hidden md:flex gap-6">
-        <a href="home.html" class="hover-underline">Home</a>
+        <a href="index.html" class="hover-underline">Home</a>
         <a href="about.html" class="hover-underline">About</a>
         <a href="projects.html" class="hover-underline">Projects</a>
         <a href="whyme.html" class="hover-underline">Why Me</a>
@@ -34,7 +34,7 @@
       </div>
     </div>
     <div id="mobile-menu" class="md:hidden hidden bg-white px-4 pb-4">
-      <a href="home.html" class="block py-2 hover-underline">Home</a>
+      <a href="index.html" class="block py-2 hover-underline">Home</a>
       <a href="about.html" class="block py-2 hover-underline">About</a>
       <a href="projects.html" class="block py-2 hover-underline">Projects</a>
       <a href="whyme.html." class="block py-2 hover-underline">Why Me</a>
