--- a/projects.html
+++ b/projects.html
@@ -19,7 +19,7 @@
     <div class="container mx-auto px-4 py-4 flex justify-between items-center">
       <h1 class="text-xl font-bold">PRADEEP PAUDEL</h1>
       <div class="hidden md:flex gap-6">
-        <a href="home.html" class="hover-underline">Home</a>
+        <a href="index.html" class="hover-underline">Home</a>
         <a href="about.html" class="hover-underline">About</a>
         <a href="projects.html" class="hover-underline">Projects</a>
         <a href="whyme.html" class="hover-underline">Why Me</a>
@@ -34,14 +34,14 @@
       </div>
     </div>
     <div id="mobile-menu" class="md:hidden hidden bg-white px-4 pb-4">
-      <a href="home.html" class="block py-2 hover-underline">Home</a>
+      <a href="index.html" class="block py-2 hover-underline">Home</a>
       <a href="about.html" class="block py-2 hover-underline">About</a>
       <a href="projects.html" class="block py-2 hover-underline">Projects</a>
       <a href="whyme.html." class="block py-2 hover-underline">Why Me</a>
       <a href="contact.html" class="block py-2 hover-underline">Contact</a>
     </div>
   </header>
- <section id="#projects" class="text-center py-16">
+ <section id="projects" class="text-center py-16">
    <h3 class="text-2xl font-semibold mb-4 text-center mt-2">Projects</h3>
   <div class="md:flex items-stretch gap-8 mt-12">
 
