--- a/contact.html
+++ b/contact.html
@@ -2,160 +2,173 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Pradeep Paudel Portfolio</title>
-  <link rel="stylesheet" href="styles.css" />
   <script src="https://cdn.tailwindcss.com"></script>
-  <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
-
 </head>
-<body class="font-sans">
+<body class="font-sans bg-gray-100">
 
-  <marquee behavior="scroll" direction="left">
+  <!-- Marquee -->
+  <marquee behavior="scroll" direction="left" class="bg-white py-1">
     Welcome to Pradeep Paudel's Portfolio | Web Developer & Graphic Designer
   </marquee>
 
+  <!-- Header / Navbar -->
   <header class="bg-white shadow-md">
     <div class="container mx-auto px-4 py-4 flex justify-between items-center">
       <h1 class="text-xl font-bold">PRADEEP PAUDEL</h1>
-      <div class="hidden md:flex gap-6">
-        <a href="index.html" class="hover-underline">Home</a>
-        <a href="about.html" class="hover-underline">About</a>
-        <a href="projects.html" class="hover-underline">Projects</a>
-        <a href="whyme.html" class="hover-underline">Why Me</a>
-        <a href="contact.html" class="hover-underline">Contact</a>
-      </div>
-      <div class="md:hidden">
-        <button id="menu-toggle">
-          <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16"></path>
+      <nav>
+        <ul class="hidden md:flex gap-6">
+          <li><a href="index.html" class="hover:text-blue-600">Home</a></li>
+          <li><a href="about.html" class="hover:text-blue-600">About</a></li>
+          <li><a href="projects.html" class="hover:text-blue-600">Projects</a></li>
+          <li><a href="whyme.html" class="hover:text-blue-600">Why Me</a></li>
+          <li><a href="contact.html" class="hover:text-blue-600">Contact</a></li>
+        </ul>
+        <button id="menu-toggle" class="md:hidden focus:outline-none">
+          <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24"
+            xmlns="http://www.w3.org/2000/svg">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+              d="M4 6h16M4 12h16M4 18h16"></path>
           </svg>
         </button>
-      </div>
+      </nav>
     </div>
     <div id="mobile-menu" class="md:hidden hidden bg-white px-4 pb-4">
-      <a href="index.html" class="block py-2 hover-underline">Home</a>
-      <a href="about.html" class="block py-2 hover-underline">About</a>
-      <a href="projects.html" class="block py-2 hover-underline">Projects</a>
-      <a href="whyme.html." class="block py-2 hover-underline">Why Me</a>
-      <a href="contact.html" class="block py-2 hover-underline">Contact</a>
+      <a href="index.html" class="block py-2 hover:text-blue-600">Home</a>
+      <a href="about.html" class="block py-2 hover:text-blue-600">About</a>
+      <a href="projects.html" class="block py-2 hover:text-blue-600">Projects</a>
+      <a href="whyme.html" class="block py-2 hover:text-blue-600">Why Me</a>
+      <a href="contact.html" class="block py-2 hover:text-blue-600">Contact</a>
     </div>
   </header>
-<body class="bg-gray-100 py-10">
-  <div class="max-w-3xl mx-auto bg-white p-8 shadow-md rounded">
-    <h1 class="text-2xl font-bold mb-6 align-item-center">Contact Form</h1>
 
-    <form id="contact-form">
-      <div class="md:flex md:space-x-4">
-        <div class="md:w-1/2">
-          <label>First Name</label>
-          <input type="text" name="firstName" required class="w-full px-4 py-2 border rounded" />
+  <!-- Contact Form -->
+  <main class="py-10">
+    <div class="max-w-3xl mx-auto bg-white p-8 shadow-md rounded">
+      <h1 class="text-2xl font-bold mb-6 text-center">Contact Form</h1>
+
+      <form id="contact-form">
+        <div class="md:flex md:space-x-4">
+          <div class="md:w-1/2">
+            <label>First Name</label>
+            <input type="text" name="firstName" required class="w-full px-4 py-2 border rounded" />
+          </div>
+          <div class="md:w-1/2 mt-4 md:mt-0">
+            <label>Surname</label>
+            <input type="text" name="surname" required class="w-full px-4 py-2 border rounded" />
+          </div>
         </div>
-        <div class="md:w-1/2 mt-4 md:mt-0">
-          <label>Surname</label>
-          <input type="text" name="surname" required class="w-full px-4 py-2 border rounded" />
+
+        <label class="block mt-4">Gender</label>
+        <div class="flex gap-4">
+          <label><input type="radio" name="gender" value="Male" required> Male</label>
+          <label><input type="radio" name="gender" value="Female"> Female</label>
+          <label><input type="radio" name="gender" value="Other"> Other</label>
         </div>
-      </div>
 
-      <label class="block mt-4">Gender</label>
-      <div class="flex gap-4">
-        <label><input type="radio" name="gender" value="Male" required> Male</label>
-        <label><input type="radio" name="gender" value="Female"> Female</label>
-        <label><input type="radio" name="gender" value="Other"> Other</label>
-      </div>
+        <label class="block mt-4">Country</label>
+        <select name="country" required class="w-full px-4 py-2 border rounded">
+          <option value="">-- Select your country --</option>
+          <option value="Nepal">Nepal</option>
+          <option value="India">India</option>
+          <option value="USA">USA</option>
+          <option value="Other">Other</option>
+        </select>
 
-      <label class="block mt-4">Country</label>
-      <select name="country" required class="w-full px-4 py-2 border rounded">
-        <option value="">-- Select your country --</option>
-        <option value="Nepal">Nepal</option>
-        <option value="India">India</option>
-        <option value="USA">USA</option>
-        <option value="Other">Other</option>
-      </select>
+        <label class="block mt-4">Mobile Number</label>
+        <input type="tel" name="mobile" pattern="[0-9]{10}" required placeholder="e.g. 9800000000"
+          class="w-full px-4 py-2 border rounded" />
 
-      <label class="block mt-4">Mobile Number</label>
-      <input type="tel" name="mobile" pattern="[0-9]{10}" required placeholder="e.g. 9800000000" class="w-full px-4 py-2 border rounded" />
+        <label class="block mt-4">Email Address</label>
+        <input type="email" name="email" required class="w-full px-4 py-2 border rounded" />
 
-      <label class="block mt-4">Email Address</label>
-      <input type="email" name="email" required class="w-full px-4 py-2 border rounded" />
+        <label class="block mt-4">Address</label>
+        <input type="text" name="address" class="w-full px-4 py-2 border rounded" />
 
-      <label class="block mt-4">Address</label>
-      <input type="text" name="address" class="w-full px-4 py-2 border rounded" />
+        <label class="block mt-4">Your Message</label>
+        <textarea name="message" rows="5" required class="w-full px-4 py-2 border rounded"></textarea>
 
-      <label class="block mt-4">Your Message</label>
-      <textarea name="message" rows="5" required class="w-full px-4 py-2 border rounded"></textarea>
+        <div class="mt-4 space-y-2">
+          <label><input type="checkbox" name="subscribe" /> Subscribe to newsletter</label><br />
+          <label><input type="checkbox" name="updates" /> Send me updates about new projects</label><br />
+          <label><input type="checkbox" name="terms" required /> I agree to the terms and conditions</label><br />
+          <label><input type="checkbox" name="privacy" required /> I agree to the privacy policy</label>
+        </div>
 
-      <!-- Checkbox options -->
-      <div class="mt-4 space-y-2">
-        <label><input type="checkbox" name="subscribe" /> Subscribe to newsletter</label><br />
-        <label><input type="checkbox" name="updates" /> Send me updates about new projects</label><br />
-        <label><input type="checkbox" name="terms" required /> I agree to the terms and conditions</label><br />
-        <label><input type="checkbox" name="privacy" required /> I agree to the privacy policy</label>
-      </div>
+        <div class="text-center mt-6">
+          <button type="submit"
+            class="bg-blue-500 text-white px-6 py-2 rounded hover:bg-blue-600 transition">Submit</button>
+          <p class="text-sm text-gray-500 mt-4">* All fields are required.</p>
+        </div>
+      </form>
 
-      <div class="text-center mt-6">
-        <button type="submit" class="bg-blue-500 text-white px-6 py-2 rounded hover:bg-blue-600 transition">Submit</button>
-        <p class="text-sm text-gray-500 mt-4">* All fields are required.</p>
-      </div>
-    </form>
-
-    <!-- Success Message -->
-    <p id="success-msg" class="hidden mt-4 text-green-600 text-center font-semibold">Form submitted successfully!</p>
-  </div>
-   <footer class="bg-gradient-to-r from-indigo-100 via-purple-100 to-pink-100 py-8">
-  <div class="max-w-4xl mx-auto flex flex-col items-center space-y-4 px-4 text-center">
-    
-    <img src="image/4.jpg" alt="Pradeep Logo" class="w-16 h-16 rounded-full shadow-lg border border-gray-300" />
-
-    <h2 class="text-xl font-semibold text-gray-800">Pradeep Paudel</h2>
-
-    <div class="flex space-x-6 mt-2">
-
-      <a href="https://www.facebook.com/pradeep07pdl" target="_blank" class="text-blue-600 hover:text-blue-800 transition">
-        <svg class="h-6 w-6" fill="currentColor" viewBox="0 0 24 24">
-          <path d="M22 12c0-5.523-4.477-10-10-10S2 6.477 2 12c0 5 3.657 9.127 8.438 9.878v-6.988H7.898v-2.89h2.54V9.797c0-2.506 1.493-3.89 3.777-3.89 1.094 0 2.238.195 2.238.195v2.46h-1.26c-1.242 0-1.63.771-1.63 1.562v1.875h2.773l-.443 2.89h-2.33v6.988C18.343 21.127 22 17 22 12z"/>
-        </svg>
-      </a>
-
-      <a href="https://wa.me/9779765671782" target="_blank" class="text-green-500 hover:text-green-600 transition">
-        <svg class="h-6 w-6" fill="currentColor" viewBox="0 0 32 32">
-          <path d="M16 2C8.27 2 2 8.27 2 16a13.91 13.91 0 002.05 7.24L2 30l6.9-1.94A13.92 13.92 0 0016 30c7.73 0 14-6.27 14-14S23.73 2 16 2zm7.9 19.1l-2.1.65a1.4 1.4 0 01-1.6-.6l-.8-1.2a10.2 10.2 0 01-4.8-4.8l-1.2-.8a1.4 1.4 0 01-.6-1.6l.65-2.1a.6.6 0 01.65-.45h1.3a.6.6 0 01.6.45l.65 1.9a.6.6 0 01-.15.6L14 13.2a9.4 9.4 0 004.8 4.8l1.25-.75a.6.6 0 01.6-.15l1.9.65a.6.6 0 01.45.6v1.3a.6.6 0 01-.45.65z"/>
-        </svg>
-      </a>
-
-      <a href="https://www.linkedin.com/in/pradip-paudel-5512a0372/" target="_blank" class="text-blue-500 hover:text-blue-700 transition">
-        <svg class="h-6 w-6" fill="currentColor" viewBox="0 0 24 24">
-          <path d="M4.98 3.5C4.98 4.88 3.87 6 2.5 6S0 4.88 0 3.5 1.12 1 2.5 1s2.48 1.12 2.48 2.5zM0 8h5v16H0V8zm7.5 0h4.8v2.2h.07c.67-1.26 2.3-2.6 4.73-2.6 5.06 0 6 3.33 6 7.66V24h-5v-6.4c0-1.53-.03-3.5-2.13-3.5s-2.46 1.67-2.46 3.4V24h-5V8z"/>
-        </svg>
-      </a>
+      <p id="success-msg" class="hidden mt-4 text-green-600 text-center font-semibold">
+        Form submitted successfully!
+      </p>
     </div>
+  </main>
 
-    <p class="text-sm text-gray-500 mt-4">&copy; 2025 Pradeep Paudel. All rights reserved.</p>
-  </div>
-</footer>
+  <!-- Footer -->
+  <footer class="bg-gradient-to-r from-indigo-100 via-purple-100 to-pink-100 py-8">
+    <div class="max-w-4xl mx-auto flex flex-col items-center space-y-4 px-4 text-center">
+      <img src="image/4.jpg" alt="Pradeep Logo"
+        class="w-16 h-16 rounded-full shadow-lg border border-gray-300" />
+      <h2 class="text-xl font-semibold text-gray-800">Pradeep Paudel</h2>
+      <div class="flex space-x-6 mt-2">
+        <a href="https://www.facebook.com/pradeep07pdl" target="_blank"
+          class="text-blue-600 hover:text-blue-800 transition">
+          <svg class="h-6 w-6" fill="currentColor" viewBox="0 0 24 24">
+            <path
+              d="M22 12c0-5.523-4.477-10-10-10S2 6.477 2 12c0 5 3.657 9.127 8.438 9.878v-6.988H7.898v-2.89h2.54V9.797c0-2.506 1.493-3.89 3.777-3.89 1.094 0 2.238.195 2.238.195v2.46h-1.26c-1.242 0-1.63.771-1.63 1.562v1.875h2.773l-.443 2.89h-2.33v6.988C18.343 21.127 22 17 22 12z" />
+          </svg>
+        </a>
+        <a href="https://wa.me/9779765671782" target="_blank"
+          class="text-green-500 hover:text-green-600 transition">
+          <svg class="h-6 w-6" fill="currentColor" viewBox="0 0 32 32">
+            <path
+              d="M16 2C8.27 2 2 8.27 2 16a13.91 13.91 0 002.05 7.24L2 30l6.9-1.94A13.92 13.92 0 0016 30c7.73 0 14-6.27 14-14S23.73 2 16 2zm7.9 19.1l-2.1.65a1.4 1.4 0 01-1.6-.6l-.8-1.2a10.2 10.2 0 01-4.8-4.8l-1.2-.8a1.4 1.4 0 01-.6-1.6l.65-2.1a.6.6 0 01.65-.45h1.3a.6.6 0 01.6.45l.65 1.9a.6.6 0 01-.15.6L14 13.2a9.4 9.4 0 004.8 4.8l1.25-.75a.6.6 0 01.6-.15l1.9.65a.6.6 0 01.45.6v1.3a.6.6 0 01-.45.65z" />
+          </svg>
+        </a>
+        <a href="https://www.linkedin.com/in/pradip-paudel-5512a0372/" target="_blank"
+          class="text-blue-500 hover:text-blue-700 transition">
+          <svg class="h-6 w-6" fill="currentColor" viewBox="0 0 24 24">
+            <path
+              d="M4.98 3.5C4.98 4.88 3.87 6 2.5 6S0 4.88 0 3.5 1.12 1 2.5 1s2.48 1.12 2.48 2.5zM0 8h5v16H0V8zm7.5 0h4.8v2.2h.07c.67-1.26 2.3-2.6 4.73-2.6 5.06 0 6 3.33 6 7.66V24h-5v-6.4c0-1.53-.03-3.5-2.13-3.5s-2.46 1.67-2.46 3.4V24h-5V8z" />
+          </svg>
+        </a>
+      </div>
+      <p class="text-sm text-gray-500 mt-4">&copy; 2025 Pradeep Paudel. All rights reserved.</p>
+    </div>
+  </footer>
 
+  <!-- Floating Home Button -->
+  <a href="index.html"
+    class="fixed bottom-6 right-6 bg-blue-600 text-white px-4 py-2 flex items-center gap-2 rounded-full shadow-lg hover:bg-blue-700 transition z-50">
+    <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none"
+      viewBox="0 0 24 24" stroke="currentColor">
+      <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+        d="M3 12l2-2m0 0l7-7 7 7M13 5v6h6m-6 0H7m6 0v6" />
+    </svg>
+    <span class="text-sm font-semibold">Home</span>
+  </a>
+
+  <!-- Mobile menu toggle script -->
   <script>
-    const form = document.getElementById("contact-form");
-    const successMsg = document.getElementById("success-msg");
+    const toggleBtn = document.getElementById("menu-toggle");
+    const mobileMenu = document.getElementById("mobile-menu");
 
-    form.addEventListener("submit", async (e) => {
-      e.preventDefault();
-      const formData = new FormData(form);
-      const data = Object.fromEntries(formData.entries());
+    toggleBtn.addEventListener("click", () => {
+      mobileMenu.classList.toggle("hidden");
+    });
 
-      try {
-        await fetch("<YOUR_SCRIPT_URL>", {
-          method: "POST",
-          body: JSON.stringify(data),
-          headers: { "Content-Type": "application/json" },
-        });
-
-        successMsg.classList.remove("hidden");
-        form.reset();
-      } catch (err) {
-        alert("Something went wrong. Try again.");
-      }
+    // Optional: close mobile menu on link click
+    mobileMenu.querySelectorAll('a').forEach(link => {
+      link.addEventListener('click', () => {
+        mobileMenu.classList.add('hidden');
+      });
     });
   </script>
+
 </body>
 </html>
