--- a/contact.html
+++ b/contact.html
@@ -147,6 +147,11 @@
 </p>
 
   </main>
+   <div class="flex justify-end max-w-2xl mx-auto mt-4">
+    <a href="index.html" class="text-white bg-indigo-600 hover:bg-indigo-700 px-4 py-2 rounded shadow">
+      Home
+    </a>
+  </div>
 
   <footer class="bg-gradient-to-r from-indigo-100 via-purple-100 to-pink-100 py-8 mt-16">
     <div class="max-w-4xl mx-auto flex flex-col items-center space-y-4 px-4 text-center">
