--- a/projects.html
+++ b/projects.html
@@ -37,7 +37,7 @@
       <a href="index.html" class="block py-2 hover-underline">Home</a>
       <a href="about.html" class="block py-2 hover-underline">About</a>
       <a href="projects.html" class="block py-2 hover-underline">Projects</a>
-      <a href="whyme.html." class="block py-2 hover-underline">Why Me</a>
+      <a href="whyme.html" class="block py-2 hover-underline">Why Me</a>
       <a href="contact.html" class="block py-2 hover-underline">Contact</a>
     </div>
   </header>
