--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ He is known for being self-motivated, detail-oriented, and committed to continuo
     <div class="key-points mt-8">
       <h3 class="text-2xl font-semibold mb-4">Key Points</h3>
       <ul class="list-disc list-inside text-left m-10">
-        <li>Currently a Class 12 student under Nepal Education Board (NEB)</li>
+        <li>Currently Studying in Shiwalaya Secondary school</li>
         <li>Passionate about web development and graphic design</li>
         <li>Experienced in building responsive websites and designing graphics</li>
         <li>Active member of Rotaract Club of Parbat with leadership roles in event organization</li>
