--- a/contact.html
+++ b/contact.html
@@ -45,9 +45,10 @@
   </header>
 
   <main class="container mx-auto max-w-3xl p-6 mt-10 bg-white rounded shadow-md">
-    <h2 class="text-3xl font-bold text-center text-indigo-700 mb-8">Contact Me</h2>
 
-   <form id="contact-form" class="space-y-6">
+     <form id="contact-form" action="https://formspree.io/f/xrblyyap" method="POST"
+    class="bg-white p-8 rounded shadow-md w-full max-w-lg space-y-6">
+    <h1 class="text-2xl font-bold text-indigo-700 mb-6 text-center">Contact Me</h1>
   <div class="md:flex md:space-x-4">
     <div class="md:flex-1">
       <label for="firstName" class="block font-semibold mb-1 text-gray-700">First Name</label>
