--- a/contact.html
+++ b/contact.html
@@ -134,12 +134,14 @@
       <span class="ml-2">I agree to the privacy policy</span>
     </label>
   </div>
-
-  <div class="text-center mt-6">
+  <a href="details.html" >
     <button type="submit"
       class="bg-indigo-600 hover:bg-indigo-700 text-white font-semibold px-8 py-2 rounded shadow transition">
-      Submit
+      Next
     </button>
+    </a>
+
+  <div class="text-center mt-6">
     <p class="text-sm text-gray-500 mt-2">* All fields are required.</p>
   </div>
 </form>
