--- a/details.html
+++ b/details.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Pradeep Paudel Portfolio - Contact</title>
+  <title>Pradeep Paudel Portfolio - Contact Details</title>
   <link rel="stylesheet" href="styles.css" />
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
@@ -43,24 +43,118 @@
       <a href="contact.html" class="block py-2 hover:text-indigo-600 transition font-semibold underline">Contact</a>
     </div>
   </header>
-  <main
-    class="max-w-3xl bg-white p-6 sm:p-8 rounded shadow-md mx-auto flex flex-col gap-6 text-gray-800">
 
-    <div id="details" class="space-y-4"></div>
+  <main class="max-w-3xl bg-white p-6 sm:p-8 rounded shadow-md mx-auto flex flex-col gap-6 text-gray-800">
 
-    <div class="mt-6 sm:mt-8">
-      <a href="contact.html"
-        class="block sm:inline-block w-full sm:w-auto text-center bg-indigo-600 hover:bg-indigo-700 text-white px-6 py-3 rounded shadow transition">
-        Back to Contact Form
-      </a>
+    <div id="details-view">
+      <h2 class="text-2xl font-bold text-indigo-700 mb-4">Contact Details</h2>
+      <p class="text-base sm:text-lg mb-4">Please find below the details you submitted:</p>
+      <div id="details"></div>
+
+      <div class="flex gap-4 mt-6">
+        <button id="edit-btn"
+          class="bg-yellow-500 text-white font-semibold px-6 py-2 rounded shadow transition">
+          Next
+        </button>
+        </div>
+
+      <div class="mt-6 sm:mt-8">
+        <a href="contact.html"
+          class="block sm:inline-block w-full sm:w-auto text-center bg-gray-300 hover:bg-gray-400 text-gray-900 px-6 py-3 rounded shadow transition">
+          Back to Contact Form
+        </a>
+      </div>
     </div>
+
+    <form id="edit-form" class="hidden flex flex-col gap-4" action="https://formspree.io/f/xrblyyap" method="POST">
+      <h2 class="text-2xl font-bold text-indigo-700 mb-4">Edit Your Details</h2>
+
+      <div class="md:flex md:space-x-4">
+        <div class="md:flex-1">
+          <label for="firstName" class="block font-semibold mb-1 text-gray-700">First Name</label>
+          <input id="firstName" name="firstName" type="text" required
+            class="w-full border border-gray-300 rounded px-4 py-2 focus:outline-none focus:ring-2 focus:ring-indigo-400" />
+        </div>
+        <div class="md:flex-1 mt-4 md:mt-0">
+          <label for="surname" class="block font-semibold mb-1 text-gray-700">Surname</label>
+          <input id="surname" name="surname" type="text" required
+            class="w-full border border-gray-300 rounded px-4 py-2 focus:outline-none focus:ring-2 focus:ring-indigo-400" />
+        </div>
+      </div>
+
+      <div>
+        <label class="block font-semibold mb-1 text-gray-700">Gender</label>
+        <div class="flex gap-6">
+          <label class="inline-flex items-center">
+            <input type="radio" id="genderMale" name="gender" value="Male" required class="form-radio text-indigo-600" />
+            <span class="ml-2">Male</span>
+          </label>
+          <label class="inline-flex items-center">
+            <input type="radio" id="genderFemale" name="gender" value="Female" required class="form-radio text-indigo-600" />
+            <span class="ml-2">Female</span>
+          </label>
+          <label class="inline-flex items-center">
+            <input type="radio" id="genderOther" name="gender" value="Other" required class="form-radio text-indigo-600" />
+            <span class="ml-2">Other</span>
+          </label>
+        </div>
+      </div>
+
+      <div>
+        <label for="country" class="block font-semibold mb-1 text-gray-700">Country</label>
+        <select id="country" name="country" required
+          class="w-full border border-gray-300 rounded px-4 py-2 focus:outline-none focus:ring-2 focus:ring-indigo-400">
+          <option value="">-- Select your country --</option>
+          <option value="Nepal">Nepal</option>
+          <option value="India">India</option>
+          <option value="USA">USA</option>
+          <option value="Other">Other</option>
+        </select>
+      </div>
+
+      <div>
+        <label for="mobile" class="block font-semibold mb-1 text-gray-700">Mobile Number</label>
+        <input id="mobile" name="mobile" type="tel" pattern="[0-9]{10}" placeholder="e.g. 9800000000" required
+          class="w-full border border-gray-300 rounded px-4 py-2 focus:outline-none focus:ring-2 focus:ring-indigo-400" />
+      </div>
+
+      <div>
+        <label for="email" class="block font-semibold mb-1 text-gray-700">Email Address</label>
+        <input id="email" name="email" type="email" required
+          class="w-full border border-gray-300 rounded px-4 py-2 focus:outline-none focus:ring-2 focus:ring-indigo-400" />
+      </div>
+
+      <div>
+        <label for="address" class="block font-semibold mb-1 text-gray-700">Address</label>
+        <input id="address" name="address" type="text" required
+          class="w-full border border-gray-300 rounded px-4 py-2 focus:outline-none focus:ring-2 focus:ring-indigo-400" />
+      </div>
+
+      <div>
+        <label for="message" class="block font-semibold mb-1 text-gray-700">Your Message</label>
+        <textarea id="message" name="message" rows="5" required
+          class="w-full border border-gray-300 rounded px-4 py-2 focus:outline-none focus:ring-2 focus:ring-indigo-400"></textarea>
+      </div>
+
+      <div class="text-center mt-4">
+        <button type="submit"
+          class="bg-indigo-600 hover:bg-indigo-700 text-white font-semibold px-8 py-2 rounded shadow transition">
+          Submit
+        </button>
+      </div>
+    </form>
+
   </main>
 
   <script>
     const params = new URLSearchParams(window.location.search);
     const detailsDiv = document.getElementById('details');
+    const detailsView = document.getElementById('details-view');
+    const editForm = document.getElementById('edit-form');
+    const editBtn = document.getElementById('edit-btn');
+    const submitBtn = document.getElementById('submit-btn');
 
-    // Map form field labels
+    // Map field labels for display
     const labels = {
       firstName: 'First Name',
       surname: 'Surname',
@@ -70,27 +164,63 @@
       email: 'Email Address',
       address: 'Address',
       message: 'Message',
-      subscribe: 'Subscribed to Newsletter',
-      updates: 'Requested Updates',
-      terms: 'Agreed to Terms',
-      privacy: 'Agreed to Privacy Policy',
     };
 
-    for (const [key, label] of Object.entries(labels)) {
-      let value = params.get(key);
-      if (value === null) continue;
-
-      // For checkboxes, show Yes/No
-      if (['subscribe', 'updates', 'terms', 'privacy'].includes(key)) {
-        value = value === 'on' ? 'Yes' : 'No';
-      }
-
-      const p = document.createElement('p');
-      p.classList.add('text-base', 'sm:text-lg');
-      p.innerHTML = `<strong>${label}:</strong> ${value}`;
-      detailsDiv.appendChild(p);
+    // Store form data from URL
+    const formData = {};
+    for (const key of Object.keys(labels)) {
+      formData[key] = params.get(key) || '';
     }
+
+    // Display data in details div
+    function displayDetails() {
+      detailsDiv.innerHTML = ''; // Clear previous
+      for (const [key, label] of Object.entries(labels)) {
+        if (!formData[key]) continue;
+        const p = document.createElement('p');
+        p.classList.add('text-base', 'sm:text-lg');
+        p.innerHTML = `<strong>${label}:</strong> ${formData[key]}`;
+        detailsDiv.appendChild(p);
+      }
+    }
+
+    displayDetails();
+
+    // Prefill the edit form inputs with formData
+    function prefillForm() {
+      editForm.firstName.value = formData.firstName;
+      editForm.surname.value = formData.surname;
+      editForm.gender.value = formData.gender;
+      editForm.country.value = formData.country;
+      editForm.mobile.value = formData.mobile;
+      editForm.email.value = formData.email;
+      editForm.address.value = formData.address;
+      editForm.message.value = formData.message;
+
+      // For radio buttons, set checked property accordingly
+      ['Male', 'Female', 'Other'].forEach(g => {
+        const radio = document.getElementById('gender' + g);
+        if (radio) radio.checked = formData.gender === g;
+      });
+    }
+
+    // Show edit form, hide details view
+    editBtn.addEventListener('click', () => {
+      detailsView.style.display = 'none';
+      editForm.classList.remove('hidden');
+      prefillForm();
+    });
+const dataStr = localStorage.getItem('contactFormData');
+if (dataStr) {
+  const data = JSON.parse(dataStr);
+  // Display data on the page
+}
+
+    // On final submit, the form submits to Formspree endpoint (default)
+    // You can add additional validation or JS here if needed
+
   </script>
+
 </body>
 
 </html>
