--- a/details.html
+++ b/details.html
@@ -67,7 +67,7 @@
     </div>
 
     <form id="edit-form" class="hidden flex flex-col gap-4" action="https://formspree.io/f/xrblyyap" method="POST">
-      <h2 class="text-2xl font-bold text-indigo-700 mb-4">Edit Your Details</h2>
+      <h2 class="text-2xl font-bold text-indigo-700 mb-4">Cheak Your Form CLearly</h2>
 
       <div class="md:flex md:space-x-4">
         <div class="md:flex-1">
